IceCreamShop/force-app/main/default/objects/Ice_Cream_Flavor__c/Ice_Cream_Flavor__c.object-meta.xml
<CustomObject>
    <label>Ice Cream Flavor</label>
    <nameField>
        <label>Ice Cream Flavor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ice Cream Flavors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>