IceCreamShop/force-app/main/default/objects/Ice_Cream_Flavor__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>The color used on the Flavors web page.  Like &quot;green&quot; or like &quot;#ab1231&quot;.</description>
    <label>Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>