IceCreamShop/force-app/main/default/objects/Ice_Cream_Flavor__c/fields/Current_Scoops_Removed__c.field-meta.xml
<CustomField>
    <fullName>Current_Scoops_Removed__c</fullName>
    <label>Current Scoops Removed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>