IceCreamShop/force-app/main/default/objects/Ice_Cream_Flavor__c/fields/Flavor_Index__c.field-meta.xml
<CustomField>
    <fullName>Flavor_Index__c</fullName>
    <displayFormat>FI-{0}</displayFormat>
    <label>Flavor Index</label>
    <type>AutoNumber</type>
</CustomField>