IceCreamShop/force-app/main/default/objects/Ice_Cream_Flavor__c/fields/Image_Texture__c.field-meta.xml
<CustomField>
    <fullName>Image_Texture__c</fullName>
    <label>Image Texture</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flavor_Images</valueSetName>
    </valueSet>
</CustomField>