IceCreamShop/force-app/main/default/objects/Ice_Cream_Flavor__c/fields/Sale_Price_Per_Scoop__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price_Per_Scoop__c</fullName>
    <label>Sale Price Per Scoop</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>